--- a/app.css
+++ b/app.css
@@ -152,7 +152,7 @@ a {
 }
 
 .container { 
-    display: non;
+    display: none;
     width: var(--container-width);
     max-width: 1366px;
     margin: 0 auto;
@@ -699,4 +699,42 @@ path {
         width: 20px;
         height: 20px;
     }
+}
+
+
+/* =================== SIMPLE PORTFOLIO VIEW ================== */
+.simple-view {
+    width: 80%;
+    padding: 40px;
+    font-size: 14px;
+    font-weight: 200;
+    line-height: 2rem;
+}
+.simple-view a {
+    color: var(--yellow);
+}
+.simple-view-intro {
+    margin-bottom: var(--sm-space);
+}
+.simple-view-name,
+.simple-view-skills,
+.simple-view-works {
+    color: var(--yellow);
+}
+.simple-view-about {
+    margin-bottom: var(--md-space);
+}
+.simple-view-skills + p,
+.simple-view-works + p,
+h4 + p {
+    margin-bottom: var(--md-space);
+}
+.simple-view-contact-me {
+    margin-top: var(--md-space);
+}
+.too-simple {
+    text-decoration: underline;
+    color: var(--yellow);
+    cursor: pointer;
+    margin-top: var(--md-space);
 }
