--- a/app.css
+++ b/app.css
@@ -701,6 +701,9 @@ path {
 }
 
 @media only screen and (max-width: 700px){
+    .pattern{
+        width: 120vw;
+    }
     .photo-holder {
         position: absolute;
         width: 80%;
