--- a/app.css
+++ b/app.css
@@ -6,11 +6,11 @@
 }
 
 :root {
-    --dark-purple: #211329;
+    --dark-purple: #241443;
     /* --dark-purple: #170820; */
-    --light-purple: #331943;
+    --light-purple: #301a5c;
     /* --very-light-purple: #C35EFF; */
-    --very-light-purple: #c147d1;
+    --very-light-purple: #924aaf;
     --yellow: #FFDA61;
 
     --text-color: #edd0ff;
