--- a/app.css
+++ b/app.css
@@ -172,19 +172,20 @@ button {
     z-index: 10;
     background-color: var(--dark-purple);
     width: 100%;
-    padding: 0 7.8%;
+    padding: 10px 7.8%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .logo {
-    width: 130px;
-    height: 130px;
-    background: url(images/naru-logo-yellow.png) no-repeat;
-    background-size: 120px;
+    width: 60px;
+    height: 60px;
+    background: url(images/naru-memoji.png) no-repeat;
+    background-size: 60%;
     background-position: center;
     background-color: var(--light-purple);
     align-self: flex-start;
+    border-radius: 50%;
 }
 .menu,
 .close-menu {
@@ -705,15 +706,15 @@ h4 + p {
         width: 90%;
     }
     .logo {
-        width: 90px;
-        height: 90px;
-        background: url(images/naru-logo-yellow.png) no-repeat;
-        background-size: 90px;
+        width: 50px;
+        height: 50px;
+        background: url(images/naru-memoji.png) no-repeat;
+        background-size: 60%;
         background-position: center;
         background-color: var(--light-purple);
     }
     .nav {
-        padding: 0 5%;
+        padding: 15px 5%;
     }
     .menu,
     .close-menu {
